JumpScript/tests/baselines/reference/internalAliasEnumInsideLocalModuleWithoutExportAccessError.errors.txt
tests/cases/compiler/internalAliasEnumInsideLocalModuleWithoutExportAccessError.jump(14,21): error TS2339: Property 'b' does not exist on type 'typeof c'.


==== tests/cases/compiler/internalAliasEnumInsideLocalModuleWithoutExportAccessError.jump (1 errors) ====
    export module a {
        export enum weekend {
            Friday,
            Saturday,
            Sunday
        }
    }
    
    export module c {
        import b = a.weekend;
        export var bVal: b = b.Sunday;
    }
    
    var happyFriday = c.b.Friday;
                        ~
!!! error TS2339: Property 'b' does not exist on type 'typeof c'.